# image-retrieval-python-supabase

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
