[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["beerose <alexsandra.sikora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vecs = "^0.4.1"
sentence-transformers = "^2.2.2"
matplotlib = "^3.8.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seed = "app.main:seed"
search = "app.main:plot_results"
